resolved the text overflowing problem and alsdo allowed the deleteBtn to sit on the upper right as I intended

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@
   border: 1px solid rgba(245, 245, 244, 0.21); /*create this tile-like look*/
   padding: 15px;
   margin: 10px; 
+  display: flex;
+  flex-direction: column; /*items will stack vertically*/
+  position: relative; 
+  word-wrap: break-word; 
+  overflow-wrap: break-word;
+}
+
+.entry div {
+  word-break: break-word;
 }
 
 .tile {
@@ -58,11 +67,15 @@
   border-radius: 50%;
   border: transparent;
   margin-left: 10px;
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
 }
 
 .deleteBtn:hover {
   border: black 2px solid;
   transform: scale(1.3);
+  cursor: pointer;
 }
 
 #plusSymbol, #postBtn {
